Horizontally scrolling elements are broken when revealed by toggling visibility https://bugs.webkit.org/show_bug.cgi?id=212439 <rdar://problem/63739559>

Reviewed by Zalan Bujtas.

Source/WebCore:

When revealing an overflow:scroll by toggling the visibility property, make sure that
we use composited scrolling.

computeScrollDimensions() is only updated on layout, so we need to recompute m_hasCompositedScrollableOverflow
on style change as well.

Test: compositing/scrolling/async-overflow-scrolling/toggle-visibility-on-scroller.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::computeScrollDimensions):
(WebCore::RenderLayer::computeHasCompositedScrollableOverflow):
(WebCore::RenderLayer::calculateClipRects const):
* rendering/RenderLayer.h:

LayoutTests:

* compositing/scrolling/async-overflow-scrolling/toggle-visibility-on-scroller-expected.txt: Added.
* compositing/scrolling/async-overflow-scrolling/toggle-visibility-on-scroller.html: Added.
* platform/ios-wk2/compositing/scrolling/async-overflow-scrolling/toggle-visibility-on-scroller-expected.txt: Added.


Canonical link: https://commits.webkit.org/225752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262774 268f45cc-cd09-0410-ab3c-d52691b4dbfc